--- a/MPfm/MPfm.Core/MPfm.Core.iOS.csproj
+++ b/MPfm/MPfm.Core/MPfm.Core.iOS.csproj
@@ -159,6 +159,8 @@
     <Compile Include="Attributes\DatabaseFieldAttribute.cs" />
     <Compile Include="DatabaseFieldMap.cs" />
     <Compile Include="Extensions\DictionaryExtension.cs" />
+    <Compile Include="Helpers\TaskHelper.cs" />
+    <Compile Include="Helpers\PathHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tracing.cs" />
     <Compile Include="OS.cs" />
@@ -169,6 +171,5 @@
     <Compile Include="Network\IPAddressRangeFinder.cs" />
     <Compile Include="Network\WebClientTimeout.cs" />
     <Compile Include="XmlSerialization.cs" />
-    <Compile Include="Helpers\PathHelper.cs" />
   </ItemGroup>
 </Project>
