--- a/MPfm/MPfm.MVP/MPfm.MVP.Android.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.Android.csproj
@@ -127,19 +127,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
-    <Compile Include="Config\Models\AudioAppConfig.cs" />
-    <Compile Include="Config\Models\CloudAppConfig.cs" />
     <Compile Include="Config\AppConfigManager.cs" />
-    <Compile Include="Config\Models\ControlsAppConfig.cs" />
     <Compile Include="Config\Models\GeneralAppConfig.cs" />
-    <Compile Include="Config\Models\ResumePlaybackAppConfig.cs" />
-    <Compile Include="Config\Models\IAppConfig.cs" />
     <Compile Include="Config\Models\LibraryAppConfig.cs" />
-    <Compile Include="Config\Models\RootAppConfig.cs" />
-    <Compile Include="Config\Models\TableViewAppConfig.cs" />
-    <Compile Include="Config\Models\TableViewColumnAppConfig.cs" />
-    <Compile Include="Config\Models\WindowAppConfig.cs" />
-    <Compile Include="Config\Models\WindowsAppConfig.cs" />
+    <Compile Include="Config\Models\CloudAppConfig.cs" />
+    <Compile Include="Config\Models\IAppConfig.cs" />
+    <Compile Include="Config\Models\ResumePlaybackAppConfig.cs" />
     <Compile Include="Messages\CloudConnectStatusChangedMessage.cs" />
     <Compile Include="Messages\ConnectionStatusChangedMessage.cs" />
     <Compile Include="Messages\ApplicationCloseMessage.cs" />
@@ -147,8 +140,8 @@
     <Compile Include="Messages\EqualizerPresetSelectedMessage.cs" />
     <Compile Include="Messages\MarkerActivatedMessage.cs" />
     <Compile Include="Messages\MarkerPositionUpdatedMessage.cs" />
-    <Compile Include="Messages\MobileLibraryBrowserPopBackstackMessage.cs" />
     <Compile Include="Messages\MobileLibraryBrowserChangeQueryMessage.cs" />
+    <Compile Include="Messages\MobileLibraryBrowserPopBackstackMessage.cs" />
     <Compile Include="Messages\PlaylistUpdatedMessage.cs" />
     <Compile Include="Messages\PlaylistListUpdatedMessage.cs" />
     <Compile Include="Messages\PlayerSetPositionMessage.cs" />
@@ -160,34 +153,33 @@
     <Compile Include="Models\MobileOptionsMenuEntity.cs" />
     <Compile Include="Models\PlaylistEntity.cs" />
     <Compile Include="Models\ResumePlaybackEntity.cs" />
+    <Compile Include="Models\SongBrowserFilterEntity.cs" />
     <Compile Include="Navigation\INavigationManager.cs" />
     <Compile Include="Navigation\MobileNavigationManager.cs" />
-    <Compile Include="Presenters\AudioPreferencesPresenter.cs" />
-    <Compile Include="Presenters\AddPlaylistPresenter.cs" />
-    <Compile Include="Presenters\AddMarkerPresenter.cs" />
     <Compile Include="Presenters\CloudConnectPresenter.cs" />
+    <Compile Include="Presenters\AddMarkerPresenter.cs" />
+    <Compile Include="Presenters\AddPlaylistPresenter.cs" />
+    <Compile Include="Presenters\AudioPreferencesPresenter.cs" />
     <Compile Include="Presenters\CloudPreferencesPresenter.cs" />
-    <Compile Include="Presenters\Interfaces\IMobileMainPresenter.cs" />
-    <Compile Include="Presenters\Interfaces\IQueuePresenter.cs" />
-    <Compile Include="Presenters\MobileMainPresenter.cs" />
     <Compile Include="Presenters\FirstRunPresenter.cs" />
-    <Compile Include="Presenters\Interfaces\IFirstRunPresenter.cs" />
     <Compile Include="Presenters\Interfaces\ICloudConnectPresenter.cs" />
     <Compile Include="Presenters\Interfaces\ICloudPreferencesPresenter.cs" />
-    <Compile Include="Presenters\Interfaces\IStartResumePlaybackPresenter.cs" />
-    <Compile Include="Presenters\QueuePresenter.cs" />
-    <Compile Include="Presenters\StartResumePlaybackPresenter.cs" />
-    <Compile Include="Presenters\SyncConnectManualPresenter.cs" />
-    <Compile Include="Presenters\ResumePlaybackPresenter.cs" />
-    <Compile Include="Presenters\Interfaces\IResumePlaybackPresenter.cs" />
-    <Compile Include="Presenters\Interfaces\ISyncConnectManualPresenter.cs" />
-    <Compile Include="Presenters\SyncCloudPresenter.cs" />
-    <Compile Include="Presenters\Interfaces\ISyncCloudPresenter.cs" />
-    <Compile Include="Presenters\SelectFoldersPresenter.cs" />
-    <Compile Include="Presenters\Interfaces\ISelectFoldersPresenter.cs" />
     <Compile Include="Presenters\Interfaces\IAddMarkerPresenter.cs" />
     <Compile Include="Presenters\Interfaces\IAddPlaylistPresenter.cs" />
+    <Compile Include="Presenters\Interfaces\IFirstRunPresenter.cs" />
+    <Compile Include="Presenters\Interfaces\IMobileMainPresenter.cs" />
+    <Compile Include="Presenters\Interfaces\IQueuePresenter.cs" />
+    <Compile Include="Presenters\Interfaces\IStartResumePlaybackPresenter.cs" />
+    <Compile Include="Presenters\Interfaces\IResumePlaybackPresenter.cs" />
+    <Compile Include="Presenters\Interfaces\ISelectFoldersPresenter.cs" />
     <Compile Include="Presenters\Interfaces\ISelectPlaylistPresenter.cs" />
+    <Compile Include="Presenters\Interfaces\ISyncCloudPresenter.cs" />
+    <Compile Include="Presenters\Interfaces\ISyncConnectManualPresenter.cs" />
+    <Compile Include="Presenters\MobileMainPresenter.cs" />
+    <Compile Include="Presenters\QueuePresenter.cs" />
+    <Compile Include="Presenters\StartResumePlaybackPresenter.cs" />
+    <Compile Include="Presenters\ResumePlaybackPresenter.cs" />
+    <Compile Include="Presenters\SelectFoldersPresenter.cs" />
     <Compile Include="Presenters\SelectPlaylistPresenter.cs" />
     <Compile Include="Presenters\MobileFirstRunPresenter.cs" />
     <Compile Include="Presenters\EditSongMetadataPresenter.cs" />
@@ -200,20 +192,20 @@
     <Compile Include="Presenters\LibraryPreferencesPresenter.cs" />
     <Compile Include="Presenters\Interfaces\ILibraryPreferencesPresenter.cs" />
     <Compile Include="Presenters\Interfaces\IAudioPreferencesPresenter.cs" />
+    <Compile Include="Presenters\SyncCloudPresenter.cs" />
+    <Compile Include="Presenters\SyncConnectManualPresenter.cs" />
     <Compile Include="Presenters\UpdateLibraryPresenter.cs" />
     <Compile Include="Models\PlayerPositionEntity.cs" />
-    <Compile Include="Views\IMobileMainView.cs" />
-    <Compile Include="Views\IFirstRunView.cs" />
     <Compile Include="Views\ICloudConnectView.cs" />
     <Compile Include="Views\ICloudPreferencesView.cs" />
-    <Compile Include="Views\IQueueView.cs" />
-    <Compile Include="Views\IResumePlaybackView.cs" />
-    <Compile Include="Views\IStartResumePlaybackView.cs" />
-    <Compile Include="Views\ISyncConnectManualView.cs" />
-    <Compile Include="Views\ISyncCloudView.cs" />
-    <Compile Include="Views\ISelectFoldersView.cs" />
     <Compile Include="Views\IAddMarkerView.cs" />
     <Compile Include="Views\IAddPlaylistView.cs" />
+    <Compile Include="Views\IFirstRunView.cs" />
+    <Compile Include="Views\IMobileMainView.cs" />
+    <Compile Include="Views\IQueueView.cs" />
+    <Compile Include="Views\IStartResumePlaybackView.cs" />
+    <Compile Include="Views\IResumePlaybackView.cs" />
+    <Compile Include="Views\ISelectFoldersView.cs" />
     <Compile Include="Views\ISelectPlaylistView.cs" />
     <Compile Include="Views\IMobileFirstRunView.cs" />
     <Compile Include="Views\IEditSongMetadataView.cs" />
@@ -222,6 +214,8 @@
     <Compile Include="Views\ILibraryPreferencesView.cs" />
     <Compile Include="Views\IGeneralPreferencesView.cs" />
     <Compile Include="Views\IAudioPreferencesView.cs" />
+    <Compile Include="Views\ISyncCloudView.cs" />
+    <Compile Include="Views\ISyncConnectManualView.cs" />
     <Compile Include="Views\IUpdateLibraryView.cs" />
     <Compile Include="Bootstrap\Bootstrapper.cs" />
     <Compile Include="Presenters\PlayerPresenter.cs" />
@@ -242,8 +236,15 @@
     <Compile Include="Presenters\SplashPresenter.cs" />
     <Compile Include="Presenters\Interfaces\ISplashPresenter.cs" />
     <Compile Include="Views\ISplashView.cs" />
+    <Compile Include="Config\Models\RootAppConfig.cs" />
     <Compile Include="Config\Providers\XmlAppConfigProvider.cs" />
     <Compile Include="Config\Providers\IAppConfigProvider.cs" />
+    <Compile Include="Config\Models\AudioAppConfig.cs" />
+    <Compile Include="Config\Models\ControlsAppConfig.cs" />
+    <Compile Include="Config\Models\TableViewAppConfig.cs" />
+    <Compile Include="Config\Models\TableViewColumnAppConfig.cs" />
+    <Compile Include="Config\Models\WindowAppConfig.cs" />
+    <Compile Include="Config\Models\WindowsAppConfig.cs" />
     <Compile Include="Services\PlayerService.cs" />
     <Compile Include="Services\Interfaces\IPlayerService.cs" />
     <Compile Include="Views\IPreferencesView.cs" />
