--- a/MPfm/MPfm.Core/MPfm.Core.Android.csproj
+++ b/MPfm/MPfm.Core/MPfm.Core.Android.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Attributes\DatabaseFieldAttribute.cs" />
     <Compile Include="DatabaseFieldMap.cs" />
     <Compile Include="Extensions\DictionaryExtension.cs" />
+    <Compile Include="Helpers\TaskHelper.cs" />
     <Compile Include="Helpers\PathHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tracing.cs" />
@@ -105,9 +106,7 @@
     <Compile Include="Normalizer.cs" />
     <Compile Include="Helpers\XMLHelper.cs" />
     <Compile Include="Network\IPAddressRangeFinder.cs" />
-    <Compile Include="Network\WebClientTimeout.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="Network\WebClientTimeout.cs" />
     <Compile Include="XmlSerialization.cs" />
   </ItemGroup>
 </Project>
