--- a/MPfm/MPfm.GenericControls/MPfm.GenericControls.Android.csproj
+++ b/MPfm/MPfm.GenericControls/MPfm.GenericControls.Android.csproj
@@ -116,6 +116,17 @@
     <Compile Include="Basics\BasicPen.cs" />
     <Compile Include="Basics\BasicPoint.cs" />
     <Compile Include="Basics\BasicGradientBrush.cs" />
+    <Compile Include="Graphics\IDisposableImageFactory.cs" />
+    <Compile Include="Wrappers\IHorizontalScrollBarWrapper.cs" />
+    <Compile Include="Wrappers\IVerticalScrollBarWrapper.cs" />
+    <Compile Include="Controls\Songs\SongGridViewControl.cs" />
+    <Compile Include="Controls\Songs\SongGridViewCache.cs" />
+    <Compile Include="Controls\Songs\SongGridViewColumn.cs" />
+    <Compile Include="Controls\Songs\SongGridViewImageCache.cs" />
+    <Compile Include="Controls\Songs\SongGridViewItem.cs" />
+    <Compile Include="Controls\Songs\SongGridViewMode.cs" />
+    <Compile Include="Controls\Songs\SongGridViewTheme.cs" />
+    <Compile Include="Controls\TrackBarControl.cs" />
     <Compile Include="Controls\WaveFormControl.cs" />
     <Compile Include="Controls\WaveFormScaleControl.cs" />
     <Compile Include="Controls\FaderControl.cs" />
@@ -134,5 +145,6 @@
     <Compile Include="Renderers\IRenderer.cs" />
     <Compile Include="Theme\ITheme.cs" />
     <Compile Include="Theme\GenericTheme.cs" />
+    <Compile Include="Interaction\IControlScrollViewInteraction.cs" />
   </ItemGroup>
 </Project>
