Mac: Updated icon for application. Time shifting controls now work.

--- a/MPfm/MPfm.Mac/MPfm.Mac.csproj
+++ b/MPfm/MPfm.Mac/MPfm.Mac.csproj
@@ -9,7 +9,7 @@
     <ProjectTypeGuids>{948B3504-5B70-4649-8FE4-BDE1FB46EC69};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Exe</OutputType>
     <RootNamespace>MPfm.Mac</RootNamespace>
-    <AssemblyName>MPfm</AssemblyName>
+    <AssemblyName>Sessions</AssemblyName>
     <SynchReleaseVersion>False</SynchReleaseVersion>
     <SuppressXamMacUpsell>True</SuppressXamMacUpsell>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
