--- a/MPfm/MPfm.WPF/MPfm.WPF.csproj
+++ b/MPfm/MPfm.WPF/MPfm.WPF.csproj
@@ -373,6 +373,12 @@
   <ItemGroup>
     <Resource Include="Resources\Images\Buttons\minus.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\Splash\splash_logo_clear%402x.png" />
+    <Resource Include="Resources\Images\Splash\splash_logo_clear.png" />
+    <Resource Include="Resources\Images\Splash\splash_logo_full%402x.png" />
+    <Resource Include="Resources\Images\Splash\splash_logo_full.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
