--- a/MPfm/MPfm.GenericControls/MPfm.GenericControls.csproj
+++ b/MPfm/MPfm.GenericControls/MPfm.GenericControls.csproj
@@ -63,7 +63,9 @@
     <Compile Include="Controls\Songs\SongGridViewTheme.cs" />
     <Compile Include="Controls\TrackBarControl.cs" />
     <Compile Include="Controls\WaveFormControl.cs" />
-    <Compile Include="Controls\WaveFormScaleControl.cs" />
+    <Compile Include="Controls\WaveFormScaleControl.cs">
+      <DependentUpon>WaveFormControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\FaderControl.cs" />
     <Compile Include="Controls\IControl.cs" />
     <Compile Include="Controls\OutputMeterControl.cs" />
