WPF: Can now zoom, scroll and interact with wave form using generic control. Updated project after changes on Mac.

--- a/MPfm/MPfm.WPF/MPfm.WPF.csproj
+++ b/MPfm/MPfm.WPF/MPfm.WPF.csproj
@@ -156,7 +156,7 @@
     <Compile Include="Classes\Controls\Graphics\GraphicsContextWrapper.cs" />
     <Compile Include="Classes\Controls\Graphics\MemoryGraphicsContextWrapper.cs" />
     <Compile Include="Classes\Controls\Helpers\GenericControlHelper.cs" />
-    <Compile Include="Classes\Controls\WaveFormScrollViewer.cs" />
+    <Compile Include="Classes\Controls\WaveFormScrollView.cs" />
     <Compile Include="Classes\Controls\WaveForm.cs" />
     <Compile Include="Classes\Controls\WaveFormScale.cs" />
     <Compile Include="Classes\Controls\TrackBar.cs" />
