Updated project files after changes on iOS.

--- a/MPfm/MPfm.MVP/MPfm.MVP.Android.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.Android.csproj
@@ -323,5 +323,9 @@
     <Compile Include="Messages\PlayerPlaylistUpdatedMessage.cs" />
     <Compile Include="Views\IDesktopPreferencesView.cs" />
     <Compile Include="Views\IDesktopEffectsView.cs" />
+    <Compile Include="Services\LifecycleService.cs" />
+    <Compile Include="Services\Interfaces\ILifecycleService.cs" />
+    <Compile Include="Services\Interfaces\IResumePlaybackService.cs" />
+    <Compile Include="Services\ResumePlaybackService.cs" />
   </ItemGroup>
 </Project>
