--- a/MPfm/MPfm.Mac/MPfm.Mac.csproj
+++ b/MPfm/MPfm.Mac/MPfm.Mac.csproj
@@ -543,5 +543,15 @@
     <BundleResource Include="Resources\icon_button_goto%402x.png" />
     <BundleResource Include="Resources\icon_button_goto.png" />
     <BundleResource Include="Resources\Splash.png" />
+    <BundleResource Include="Resources\icon_button_dropbox.png" />
+    <BundleResource Include="Resources\icon_button_dropbox%402x.png" />
+    <BundleResource Include="Resources\icon_button_cloud.png" />
+    <BundleResource Include="Resources\icon_button_cloud%402x.png" />
+    <BundleResource Include="Resources\icon_button_general.png" />
+    <BundleResource Include="Resources\icon_button_general%402x.png" />
+    <BundleResource Include="Resources\icon_button_library.png" />
+    <BundleResource Include="Resources\icon_button_library%402x.png" />
+    <BundleResource Include="Resources\icon_button_test.png" />
+    <BundleResource Include="Resources\icon_button_test%402x.png" />
   </ItemGroup>
 </Project>
