Mac: Added CloudConnect UI. Dropbox can now be linked.
Fixed several bugs with resume playback on startup; the
StartResumePlayback window is now visible on startup.
Added glyph for OK button.
Dropbox status is now refreshed in Preferences.

--- a/MPfm/MPfm.Mac/MPfm.Mac.csproj
+++ b/MPfm/MPfm.Mac/MPfm.Mac.csproj
@@ -559,5 +559,7 @@
     <BundleResource Include="Resources\icon_button_library%402x.png" />
     <BundleResource Include="Resources\icon_button_test.png" />
     <BundleResource Include="Resources\icon_button_test%402x.png" />
+    <BundleResource Include="Resources\icon_button_ok.png" />
+    <BundleResource Include="Resources\icon_button_ok%402x.png" />
   </ItemGroup>
 </Project>
