Mac: Now reloading LibraryBrowser state on startup.
- Added LibraryBrowserAppConfig in RootAppConfig
- Fixed bugs in XmlAppConfigProvider for loading/saving files in
multiple threads
- Added LibraryBrowser state load/save in LibraryBrowserPresenter

--- a/MPfm/MPfm.MVP/MPfm.MVP.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.csproj
@@ -323,5 +323,6 @@
     <Compile Include="Services\Interfaces\ILifecycleService.cs" />
     <Compile Include="Services\Interfaces\IResumePlaybackService.cs" />
     <Compile Include="Services\ResumePlaybackService.cs" />
+    <Compile Include="Config\Models\LibraryBrowserAppConfig.cs" />
   </ItemGroup>
 </Project>
