Mac: Added IBasicImage to MPfm.GenericControls.
- IBasicImage adds a property to get the image size. This is useful when
loading images from byte arrays; the image size isn't known from the
start.
- SongGridViewControl now uses IBasicImage, this should fix bitmap size
mismatch in WPF in HiDPI mode.

--- a/MPfm/MPfm.GenericControls/MPfm.GenericControls.csproj
+++ b/MPfm/MPfm.GenericControls/MPfm.GenericControls.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Renderers\IRenderer.cs" />
     <Compile Include="Theme\ITheme.cs" />
     <Compile Include="Theme\GenericTheme.cs" />
+    <Compile Include="Basics\IBasicImage.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MPfm.Core\MPfm.Core.csproj">
