--- a/MPfm/MPfm.Mac/MPfm.Mac.csproj
+++ b/MPfm/MPfm.Mac/MPfm.Mac.csproj
@@ -258,6 +258,7 @@
       <DependentUpon>CloudConnectWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="Windows\Controllers\CloudConnectWindowController.cs" />
+    <Compile Include="Classes\Controls\Graphics\BasicImage.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Views\LibraryBrowser.xib" />
