--- a/MPfm/MPfm.GenericControls/MPfm.GenericControls.Android.csproj
+++ b/MPfm/MPfm.GenericControls/MPfm.GenericControls.Android.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Basics\BasicPen.cs" />
     <Compile Include="Basics\BasicPoint.cs" />
     <Compile Include="Basics\BasicGradientBrush.cs" />
+    <Compile Include="Basics\IBasicImage.cs" />
     <Compile Include="Graphics\IDisposableImageFactory.cs" />
     <Compile Include="Interaction\IControlKeyboardInteraction.cs" />
     <Compile Include="Services\Events\GeneratePeakFileEventArgs.cs" />
