--- a/MPfm/MPfm.WPF/MPfm.WPF.csproj
+++ b/MPfm/MPfm.WPF/MPfm.WPF.csproj
@@ -146,6 +146,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Classes\Controls\Graphics\BasicImage.cs" />
     <Compile Include="Classes\Controls\Graphics\DisposableImageFactory.cs" />
     <Compile Include="Classes\Controls\SongGridView.cs" />
     <Compile Include="Classes\Controls\TestControl.cs" />
