--- a/MPfm/MPfm.GenericControls/MPfm.GenericControls.iOS.csproj
+++ b/MPfm/MPfm.GenericControls/MPfm.GenericControls.iOS.csproj
@@ -204,5 +204,6 @@
     <Compile Include="Renderers\IRenderer.cs" />
     <Compile Include="Theme\ITheme.cs" />
     <Compile Include="Theme\GenericTheme.cs" />
+    <Compile Include="Basics\IBasicImage.cs" />
   </ItemGroup>
 </Project>
