--- a/MPfm/MPfm.Mac/MPfm.Mac.exe.config
+++ b/MPfm/MPfm.Mac/MPfm.Mac.exe.config
@@ -3,7 +3,10 @@
 	<dllmap dll="bass.dll" target="libbass.dylib"/>
 	<dllmap dll="bass_fx.dll" target="libbass_fx.dylib"/>
 	<dllmap dll="bass_mpc.dll" target="libbass_mpc.dylib"/>
+    <dllmap dll="bass_ape.dll" target="libbass_ape.dylib"/>
+    <dllmap dll="bass_tta.dll" target="libbass_tta.dylib"/>
 	<dllmap dll="bassflac.dll" target="libbassflac.dylib"/>
 	<dllmap dll="bassmix.dll" target="libbassmix.dylib"/>
 	<dllmap dll="basswv.dll" target="libbasswv.dylib"/>
+    <dllmap dll="bassenc.dll" target="libbassenc.dylib"/>
 </configuration>
