OSX: Added wrapper methods for Bassenc.
- Added BaseCast and BaseEnc for encoding and casting.
- Added CastServerMetadata and CastServerParams structures for casting
servers.
- Updated Player with test for BaseCast/BaseEnc (commented out).

--- a/MPfm.Player/MPfm.Player.OSX.csproj
+++ b/MPfm.Player/MPfm.Player.OSX.csproj
@@ -112,5 +112,7 @@
     <Compile Include="Objects\Marker.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Events\AudioInterruptedData.cs" />
+    <Compile Include="Objects\CastServerParams.cs" />
+    <Compile Include="Objects\CastServerMetadata.cs" />
   </ItemGroup>
 </Project>
