--- a/MPfm.Sound/MPfm.Sound.OSX.csproj
+++ b/MPfm.Sound/MPfm.Sound.OSX.csproj
@@ -153,6 +153,7 @@
     <Compile Include="BassNetWrapper\BassWrapper.cs" />
     <Compile Include="BassNetWrapper\BaseFx.cs" />
     <Compile Include="BassNetWrapper\BaseEnc.cs" />
+    <Compile Include="BassNetWrapper\BaseCast.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Lib\OSX\" />
