--- a/MPfm.Player/MPfm.Player.csproj
+++ b/MPfm.Player/MPfm.Player.csproj
@@ -102,6 +102,8 @@
   <ItemGroup>
     <Compile Include="Exceptions\PlayerCreateStreamException.cs" />
     <Compile Include="IPlayer.cs" />
+    <Compile Include="Objects\CastServerMetadata.cs" />
+    <Compile Include="Objects\CastServerParams.cs" />
     <Compile Include="Objects\PlayerSyncProc.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Objects\RepeatType.cs" />
